Prevent zooming of text input when focusing on iPhone

--- a/assets/stylesheets/application.less
+++ b/assets/stylesheets/application.less
@@ -35,6 +35,7 @@ h1 {
   @media(max-width: 320px) {
     input[name='query'] {
       width: 140px;
+      font-size: 16px; // prevent zoom on focus
     }
   }
 
